--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
     android:orientation="vertical">
 
     <TextView
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
@@ -18,23 +19,23 @@
         android:padding="30dp"
         android:textColor="@color/red"
         android:textSize="25sp"
-        android:textstyle="bold"
         android:text="Mesure de niveau de glycémie"
         />
 
     <TextView
+        android:id="@+id/txt"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="20dp"
         android:text="Votre Age :"
-        android:textSize="20dp"></TextView>
+        android:textSize="20dp"
+        android:textColor="@color/brown"></TextView>
 
     <SeekBar
         android:id="@+id/sbAge"
         android:layout_width="match_parent"
         android:layout_height="38dp"
         android:layout_marginTop="20dp"
-
         android:max="120" />
 
     <TextView
@@ -42,7 +43,8 @@
         android:layout_height="46dp"
         android:layout_marginTop="20dp"
         android:text="Est-ce que vous jeunez Age :"
-        android:textSize="20dp"></TextView>
+        android:textColor="@color/brown"
+        android:textSize="20sp"></TextView>
 
     <RadioGroup
         android:layout_width="match_parent"
@@ -50,6 +52,7 @@
         android:orientation="horizontal"
         android:layout_marginTop="10dp">
         <RadioButton
+            android:id="@+id/yes"
             android:layout_width="0dp"
             android:layout_height="48dp"
             android:layout_weight="1"
@@ -58,6 +61,7 @@
             android:textColor="@color/black"
             android:textSize="20sp"></RadioButton>
         <RadioButton
+            android:id="@+id/no"
             android:layout_width="0dp"
             android:layout_height="48dp"
             android:layout_weight="1"
@@ -67,12 +71,13 @@
     </RadioGroup>
 
     <EditText
+        android:id="@+id/edtxt"
         android:layout_width="355dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:hint="Valeur Mesure en (mmol/l)"
         android:inputType="numberDecimal"
-        android:textSize="20sp"></EditText>
+        android:textSize="20sp" ></EditText>
 
     <Button
         android:id="@+id/btnConsulter"
@@ -81,6 +86,16 @@
         android:layout_marginTop="20dp"
         android:text="Consulter"
         android:textColor="@color/white"
-        android:textSize="18sp"></Button>
-
+        android:textSize="18sp"
+        android:background="@color/black"
+        android:onClick="calculer"
+        ></Button>
+    <TextView
+        android:id="@+id/outputText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textSize="16sp"
+        android:textColor="#000000"
+        android:layout_marginTop="16dp" />
 </LinearLayout>
