--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FF0000</color>
+    <color name="brown">#964B00</color>
+    <color name="green">#00FF00</color>
+    <color name="my_custom_color">#FF5733</color>
+
 </resources>
