--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:padding="20dp"
     android:background="@drawable/app_background"
-    tools:context=".MainActivity"
+    tools:context=".vue.MainActivity"
     android:orientation="vertical">
 
     <TextView
@@ -29,7 +29,8 @@
         android:layout_marginTop="20dp"
         android:text="Votre Age :"
         android:textSize="20dp"
-        android:textColor="@color/brown"></TextView>
+        android:textColor="@color/brown"
+        android:onClick="Calculer"></TextView>
 
     <SeekBar
         android:id="@+id/sbAge"
